	  support/regression/tests/gcc-torture-execute-pr65170.c,
	  support/regression/tests/gcc-torture-execute-pr65215-1.c,
	  support/regression/tests/gcc-torture-execute-pr65215-2.c,
	  support/regression/tests/gcc-torture-execute-pr66940.c,
	  support/regression/tests/gcc-torture-execute-pr69320-4.c:
	  Disable new long long tests for ds390.

2017-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20111227-1.c,
	  support/regression/tests/gcc-torture-execute-2012*.c,
	  support/regression/tests/gcc-torture-execute-2013*.c,
	  support/regression/tests/gcc-torture-execute-2014*.c,
	  support/regression/tests/gcc-torture-execute-2015*.c,
	  support/regression/tests/gcc-torture-execute-2017*.c:
	  Port more tests from the GCC testsuite.
	* src/stm8/gen.c,
	  support/regression/tests/gcc-torture-execute-20141022-1.c:
	  Fix bug #2652.
	* support/regression/tests/gcc-torture-execute-pr51581-1.c,
	  support/regression/tests/gcc-torture-execute-pr51581-2.c:
	  support/regression/tests/gcc-torture-execute-pr6*.c:
	  Port more tests from the GCC testsuite.

2017-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  support/regression/tests/bug-2645.c:
	  Fix bug #2645, patch by Kamil Zbróg.
	* src/z80/gen.c,
	  support/regression/tests/bug-441448.c,
	  support/regression/tests/bug2729218.c:
	  Fix bug #2649.

2017-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Fix long long support in DWARF output (bug #2613)
	* src/z80/gen.c:
	  Fix interaction of __z88dk_fastcall with frame pointer setup when optimizing for code size (bug #2581).
	* device/lib/calloc.c,
	  support/regression/tests/malloc.c:
	  Fix bug #2650.

2017-09-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Optimize stm8 left shifts a bit better.

2017-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/preserves_regs.c:
	  Test specifications for preserved registers.
